2008-12-03 01:11-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSApplication.m: Always resize icon to 48x48 so that
	icons larger than this will display correctly.  Change made in
	setApplicationIconImage:. 

2008-12-02 23:55-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Added some new methods to address
	bug #24985.
	* Source/NSMenu.m: Removed some spaces after a close brace.

2008-12-02 19:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSApplication.m: Fix for bug #24785. 

2008-12-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBrowser.m: fix uninitialised variable.
	* Source/GNUmakefile:
	* PrinterTypes/GNUmakefile:
	* Documentation/GuiUser/GNUmakefile:
	* Documentation/GNUmakefile:
	* Documentation/General/GNUmakefile:
	* Resources/GNUmakefile:
	* Panels/GNUmakefile:
	* GNUmakefile:
	* Printing/GSLPR/GNUmakefile:
	* ColorPickers/GNUmakefile:
	* Model/GNUmakefile:
	* Tools/GNUmakefile:
	* Tools/gsnd/GNUmakefile:
	* Images/GNUmakefile:
	Fix bug #24672
	* Tools/make_services.m:
	Fix bug #24990 ... was reporting debug output which should only have
	appeared when running in verbose mode.

2008-12-02 02:31-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m
	* Source/NSButtonCell.m
	* Source/NSNibAXAttributeConnector.m
	* Source/NSNibAXRelationshipConnector.m
	* Source/NSNibBindingConnector.m
	* Source/NSNib.m
	* Source/NSProgressIndicator.m: Change to use new headers.

2008-12-02 02:07-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Remove
	* Headers/Additions/GNUstepGUI/GSNibTemplates.h: Remove
	* Source/GNUmakefile: Update to reference new files.
	* Source/GSGormLoader.m: Change to reference the
	* Source/GSGormLoading.m: New gorm loading file.
	* Source/GSNibCompatibility.m: Removed.
	* Source/GSNibLoader.m: Reference the new file.